--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "10.12.18",
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
+    "classnames": "^2.2.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
@@ -30,12 +31,16 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "tslint": "^5.12.1",
-    "@storybook/react": "^4.1.6",
+    "@babel/core": "^7.2.2",
     "@storybook/addon-actions": "^4.1.6",
     "@storybook/addon-links": "^4.1.6",
     "@storybook/addons": "^4.1.6",
-    "@babel/core": "^7.2.2",
-    "babel-loader": "^8.0.5"
+    "@storybook/react": "^4.1.6",
+    "@types/classnames": "^2.2.7",
+    "@types/storybook__addon-actions": "^3.4.1",
+    "@types/storybook__addon-links": "^3.3.3",
+    "@types/storybook__react": "^4.0.0",
+    "babel-loader": "^8.0.5",
+    "tslint": "^5.12.1"
   }
 }
